@@ -1,23 +1,14 @@
-// -*- C++ -*- Time-stamp: <05/12/30 00:21:23 ptr>
+// -*- C++ -*- Time-stamp: <06/10/04 09:36:24 ptr>
 
 /*
- *
- * Copyright (c) 1995-1999, 2002, 2003, 2005
+ * Copyright (c) 1995-1999, 2002, 2003, 2005, 2006
  * Petr Ovtchenkov
  *
  * Copyright (c) 1999
  * ParallelGraphics Ltd.
  *
- * Licensed under the Academic Free License version 2.1
+ * Licensed under the Academic Free License version 3.0
  *
- * This material is provided "as is", with absolutely no warranty expressed
- * or implied. Any use is at your own risk.
- *
- * Permission to use, copy, modify, distribute and sell this software
- * and its documentation for any purpose is hereby granted without fee,
- * provided that the above copyright notice appear in all copies and
- * that both that copyright notice and this permission notice appear
- * in supporting documentation.
  */
 
 #ifndef __EDSEv_h
@@ -40,15 +31,19 @@ namespace stem {
 #define EV_EDS_RQ_EXT_ADDR_LIST  0x16
 #define EV_EDS_RQ_ADDR_BY_NAME   0x1b
 
+
+#define EV_STEM_NS1_LIST          0x1e
+#define EV_STEM_NS1_NAME          0x1f
+#define EV_STEM_RQ_ADDR_LIST1     0x20
+#define EV_STEM_RQ_EXT_ADDR_LIST1 0x21
+#define EV_STEM_RQ_ADDR_BY_NAME1  0x22
+
 // Cron Service
 #define EV_EDS_CRON_ADD          0x17
 #define EV_EDS_CRON_REMOVE       0x18
 #define EV_EDS_CRON_REMOVE_ARG   0x1d
 #define EV_EDS_CRON_START        0x19
 #define EV_EDS_CRON_STOP         0x1a
-                              // 0x1b
-                              // 0x1c
-                              // 0x1d
 
 } // namespace stem
 
