@@ -1,4 +1,4 @@
-// -*- C++ -*- Time-stamp: <06/10/03 11:06:19 ptr>
+// -*- C++ -*- Time-stamp: <06/10/04 09:51:02 ptr>
 
 /*
  * Copyright (c) 1997-1999, 2002, 2003, 2005, 2006
@@ -46,76 +46,111 @@ __FIT_DECLSPEC Names::~Names()
 
 void __FIT_DECLSPEC Names::get_list( const Event& rq )
 {
-  list<NameRecord> lst;
-  {
-    MT_REENTRANT( manager()->_lock_heap, _x1 );
-    for ( EvManager::heap_type::iterator i = manager()->heap.begin(); i != manager()->heap.end(); ++i ) {
-      if ( ((*i).first & extbit) == 0 ) { // only local...
-        lst.push_back( NameRecord((*i).first, (*i).second.info ) );
-      }
+  typedef NameRecords<addr_type,string> Seq;
+  Event_base<Seq> rs( EV_STEM_NS1_LIST );
+  Seq::container_type& lst = rs.value().container;
+
+  manager()->_lock_heap.lock();
+  for ( EvManager::heap_type::iterator i = manager()->heap.begin(); i != manager()->heap.end(); ++i ) {
+    if ( ((*i).first & extbit) == 0 ) { // only local...
+      lst.push_back( make_pair((*i).first, (*i).second.info) );
     }
   }
+  manager()->_lock_heap.unlock();
 
-  Event_base<NameRecord> rs( EV_EDS_NM_LIST );
+  if ( rq.code() == EV_STEM_RQ_ADDR_LIST1 ) {
+    rs.dest( rq.src() );
+    Send( rs );
+  } else {
+    Event_base<NameRecord> rs_( EV_EDS_NM_LIST );
 
-  rs.dest( rq.src() );
-  for ( list<NameRecord>::const_iterator i = lst.begin(); i != lst.end(); ++i ) {
-    rs.value() = *i;
-    Send( Event_convert<NameRecord>()( rs ) );
+    rs_.dest( rq.src() );
+    for ( Seq::const_iterator i = lst.begin(); i != lst.end(); ++i ) {
+      rs_.value().addr = i->first;
+      rs_.value().record = i->second;
+      Send( Event_convert<NameRecord>()( rs_ ) );
+    }
+    // end of table
+    rs_.value().addr = badaddr;
+    rs_.value().record.clear();
+    Send( Event_convert<NameRecord>()( rs_ ) );
   }
-  // end of table
-  rs.value().addr = badaddr;
-  rs.value().record.clear();
-  Send( Event_convert<NameRecord>()( rs ) );
 }
 
 void __FIT_DECLSPEC Names::get_ext_list( const Event& rq )
 {
-  list<NameRecord> lst;
-  {
-    MT_REENTRANT( manager()->_lock_heap, _x1 );
-    for ( EvManager::heap_type::const_iterator i = manager()->heap.begin(); i != manager()->heap.end(); ++i ) {
-      if ( ((*i).first & extbit) != 0 ) { // only external...
-        lst.push_back( NameRecord((*i).first, (*i).second.info ) );
-      }
+  typedef NameRecords<addr_type,string> Seq;
+  Event_base<Seq> rs( EV_STEM_NS1_LIST );
+  Seq::container_type& lst = rs.value().container;
+
+  manager()->_lock_heap.lock();
+  for ( EvManager::heap_type::const_iterator i = manager()->heap.begin(); i != manager()->heap.end(); ++i ) {
+    if ( ((*i).first & extbit) != 0 ) { // only external...
+      lst.push_back( make_pair((*i).first, (*i).second.info) );
     }
   }
-  Event_base<NameRecord> rs( EV_EDS_NM_LIST );
+  manager()->_lock_heap.unlock();
 
-  rs.dest( rq.src() );
-  for ( list<NameRecord>::const_iterator i = lst.begin(); i != lst.end(); ++i ) {
-    rs.value() = *i;
-    Send( Event_convert<NameRecord>()( rs ) );
+  if ( rq.code() == EV_STEM_RQ_EXT_ADDR_LIST1 ) {
+    rs.dest( rq.src() );
+    Send( rs );
+  } else {
+    Event_base<NameRecord> rs_( EV_EDS_NM_LIST );
+
+    rs_.dest( rq.src() );
+    for ( Seq::const_iterator i = lst.begin(); i != lst.end(); ++i ) {
+      rs_.value().addr = i->first;
+      rs_.value().record = i->second;
+      Send( Event_convert<NameRecord>()( rs_ ) );
+    }
+    // end of table
+    rs_.value().addr = badaddr;
+    rs_.value().record.clear();
+    Send( Event_convert<NameRecord>()( rs_ ) );
   }
-  // end of table
-  rs.value().addr = badaddr;
-  rs.value().record.clear();
-  Send( Event_convert<NameRecord>()( rs ) );
 }
 
 void __FIT_DECLSPEC Names::get_by_name( const Event& rq )
 {
-  list<NameRecord> lst;
-  {
-    MT_REENTRANT( manager()->_lock_heap, _x1 );
-    for ( EvManager::heap_type::const_iterator i = manager()->heap.begin(); i != manager()->heap.end(); ++i ) {
-      if ( ((*i).first & extbit) == 0 && (*i).second.info == rq.value() ) { // only local...
-        lst.push_back( NameRecord((*i).first, (*i).second.info ) );
-      }
+  typedef NameRecords<addr_type,string> Seq;
+  Event_base<Seq> rs( EV_STEM_NS1_NAME );
+  Seq::container_type& lst = rs.value().container;
+
+  manager()->_lock_heap.lock();
+  for ( EvManager::heap_type::const_iterator i = manager()->heap.begin(); i != manager()->heap.end(); ++i ) {
+    if ( ((*i).first & extbit) == 0 && (*i).second.info == rq.value() ) { // only local...
+      lst.push_back( make_pair((*i).first, (*i).second.info) );
     }
   }
-  Event_base<NameRecord> rs( EV_EDS_NS_ADDR );
+  manager()->_lock_heap.unlock();
 
-  rs.dest( rq.src() );
-  for ( list<NameRecord>::const_iterator i = lst.begin(); i != lst.end(); ++i ) {
-    rs.value() = *i;
-    Send( Event_convert<NameRecord>()( rs ) );
+  if ( rq.code() == EV_STEM_RQ_ADDR_BY_NAME1 ) {
+    rs.dest( rq.src() );
+    Send( rs );
+  } else {
+    Event_base<NameRecord> rs_( EV_EDS_NS_ADDR );
+
+    rs_.dest( rq.src() );
+    for ( Seq::const_iterator i = lst.begin(); i != lst.end(); ++i ) {
+      rs_.value().addr = i->first;
+      rs_.value().record = i->second;
+      Send( Event_convert<NameRecord>()( rs_ ) );
+    }
+    // end of table
+    rs_.value().addr = badaddr;
+    rs_.value().record.clear();
+    Send( Event_convert<NameRecord>()( rs_ ) );
   }
-  // end of table
-  rs.value().addr = badaddr;
-  rs.value().record.clear();
-  Send( Event_convert<NameRecord>()( rs ) );
 }
+
+DEFINE_RESPONSE_TABLE( Names )
+  EV_EDS(ST_NULL,EV_EDS_RQ_ADDR_LIST,get_list)
+  EV_EDS(ST_NULL,EV_STEM_RQ_ADDR_LIST1,get_list)
+  EV_EDS(ST_NULL,EV_EDS_RQ_EXT_ADDR_LIST,get_ext_list)
+  EV_EDS(ST_NULL,EV_STEM_RQ_EXT_ADDR_LIST1,get_ext_list)
+  EV_EDS(ST_NULL,EV_EDS_RQ_ADDR_BY_NAME,get_by_name)
+  EV_EDS(ST_NULL,EV_STEM_RQ_ADDR_BY_NAME1,get_by_name)
+END_RESPONSE_TABLE
 
 __FIT_DECLSPEC
 void NameRecord::pack( std::ostream& s ) const
@@ -144,11 +179,5 @@ void NameRecord::net_unpack( std::istream& s )
   __net_unpack( s, addr );
   __net_unpack( s, record );
 }
-
-DEFINE_RESPONSE_TABLE( Names )
-  EV_EDS(ST_NULL,EV_EDS_RQ_ADDR_LIST,get_list)
-  EV_EDS(ST_NULL,EV_EDS_RQ_EXT_ADDR_LIST,get_ext_list)
-  EV_EDS(ST_NULL,EV_EDS_RQ_ADDR_BY_NAME,get_by_name)
-END_RESPONSE_TABLE
 
 } // namespace stem
